--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -210,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "230209bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b899262d4834405b8e218d1738688841",
+       "model_id": "d605f75075664accada5c0d9670768f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "9ca4f49d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7a7b79e93de42f5b0f0c937b3a8bff5",
+       "model_id": "1848418f613b4979a542dabe751db39f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -288,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "21f0f86f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05ededf4586945f98dc982a88e967b5e",
+       "model_id": "fdc067bf4ed746c59b342559c6d56258",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "0e6afe2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "650d7eaf4e2f489fb43aa7e4b34d9be2",
+       "model_id": "b6f9b43ee26d4a7bb745239abd5c86d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "48775893",
    "metadata": {},
    "outputs": [
@@ -370,8 +370,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is the minimum temperature you would like for your trip? 75\n",
-      "What is the maximum temperature you would like for your trip? 90\n"
+      "What is the minimum temperature you would like for your trip? 70\n",
+      "What is the maximum temperature you would like for your trip? 95\n"
      ]
     }
    ],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e6254bbd",
    "metadata": {},
    "outputs": [
@@ -433,6 +433,32 @@
        "      <td>79</td>\n",
        "      <td>40</td>\n",
        "      <td>3.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Sabha</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>2021-10-24 04:42:18</td>\n",
+       "      <td>27.0377</td>\n",
+       "      <td>14.4283</td>\n",
+       "      <td>73.31</td>\n",
+       "      <td>25</td>\n",
+       "      <td>41</td>\n",
+       "      <td>13.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Sumbe</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>2021-10-24 04:42:19</td>\n",
+       "      <td>-11.2061</td>\n",
+       "      <td>13.8437</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>79</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -525,32 +551,6 @@
        "      <td>88</td>\n",
        "      <td>13.76</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>21</td>\n",
-       "      <td>Marsh Harbour</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>2021-10-24 04:42:23</td>\n",
-       "      <td>26.5412</td>\n",
-       "      <td>-77.0636</td>\n",
-       "      <td>80.38</td>\n",
-       "      <td>74</td>\n",
-       "      <td>67</td>\n",
-       "      <td>12.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>Vaini</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>2021-10-24 04:42:24</td>\n",
-       "      <td>-21.2000</td>\n",
-       "      <td>-175.2000</td>\n",
-       "      <td>77.16</td>\n",
-       "      <td>73</td>\n",
-       "      <td>20</td>\n",
-       "      <td>9.22</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -558,6 +558,8 @@
       "text/plain": [
        "    City_ID              City Country                 Date      Lat       Lng  \\\n",
        "4         4              Hilo      US  2021-10-24 04:42:17  19.7297 -155.0900   \n",
+       "5         5             Sabha      LY  2021-10-24 04:42:18  27.0377   14.4283   \n",
+       "8         8             Sumbe      AO  2021-10-24 04:42:19 -11.2061   13.8437   \n",
        "10       10            Atuona      PF  2021-10-24 04:42:19  -9.8000 -139.0333   \n",
        "11       11        Butaritari      KI  2021-10-24 04:42:20   3.0707  172.7902   \n",
        "12       12  Saint Pete Beach      US  2021-10-24 04:42:20  27.7253  -82.7412   \n",
@@ -565,23 +567,21 @@
        "14       14            Majene      ID  2021-10-24 04:42:21  -3.5403  118.9707   \n",
        "17       17   Bambous Virieux      MU  2021-10-24 04:42:21 -20.3428   57.7575   \n",
        "18       18         Hithadhoo      MV  2021-10-24 04:42:22  -0.6000   73.0833   \n",
-       "21       21     Marsh Harbour      BS  2021-10-24 04:42:23  26.5412  -77.0636   \n",
-       "23       23             Vaini      TO  2021-10-24 04:42:24 -21.2000 -175.2000   \n",
        "\n",
        "    Max Temp  Humidity  Cloudiness  Wind Speed  \n",
        "4      76.73        79          40        3.44  \n",
+       "5      73.31        25          41       13.89  \n",
+       "8      74.75        79          99        1.54  \n",
        "10     78.15        77          19       19.64  \n",
        "11     81.25        70          36        4.18  \n",
        "12     79.00        73         100        1.01  \n",
        "13     75.02        78         100       18.19  \n",
        "14     86.25        64          25        6.53  \n",
        "17     79.21        78          40       13.80  \n",
-       "18     83.12        73          88       13.76  \n",
-       "21     80.38        74          67       12.15  \n",
-       "23     77.16        73          20        9.22  "
+       "18     83.12        73          88       13.76  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,27 +595,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "7fa50616",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "City_ID       165\n",
-       "City          165\n",
-       "Country       165\n",
-       "Date          165\n",
-       "Lat           165\n",
-       "Lng           165\n",
-       "Max Temp      165\n",
-       "Humidity      165\n",
-       "Cloudiness    165\n",
-       "Wind Speed    165\n",
+       "City_ID       213\n",
+       "City          213\n",
+       "Country       213\n",
+       "Date          213\n",
+       "Lat           213\n",
+       "Lng           213\n",
+       "Max Temp      213\n",
+       "Humidity      213\n",
+       "Cloudiness    213\n",
+       "Wind Speed    213\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "e4b060ac",
    "metadata": {},
    "outputs": [
@@ -667,6 +667,24 @@
        "      <td>76.73</td>\n",
        "      <td>19.7297</td>\n",
        "      <td>-155.0900</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sabha</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>73.31</td>\n",
+       "      <td>27.0377</td>\n",
+       "      <td>14.4283</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sumbe</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>-11.2061</td>\n",
+       "      <td>13.8437</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -732,24 +750,6 @@
        "      <td>73.0833</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Marsh Harbour</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>80.38</td>\n",
-       "      <td>26.5412</td>\n",
-       "      <td>-77.0636</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Vaini</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>77.16</td>\n",
-       "      <td>-21.2000</td>\n",
-       "      <td>-175.2000</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -757,18 +757,18 @@
       "text/plain": [
        "                City Country  Max Temp      Lat       Lng Hotel Name\n",
        "4               Hilo      US     76.73  19.7297 -155.0900           \n",
+       "5              Sabha      LY     73.31  27.0377   14.4283           \n",
+       "8              Sumbe      AO     74.75 -11.2061   13.8437           \n",
        "10            Atuona      PF     78.15  -9.8000 -139.0333           \n",
        "11        Butaritari      KI     81.25   3.0707  172.7902           \n",
        "12  Saint Pete Beach      US     79.00  27.7253  -82.7412           \n",
        "13           Rikitea      PF     75.02 -23.1203 -134.9692           \n",
        "14            Majene      ID     86.25  -3.5403  118.9707           \n",
        "17   Bambous Virieux      MU     79.21 -20.3428   57.7575           \n",
-       "18         Hithadhoo      MV     83.12  -0.6000   73.0833           \n",
-       "21     Marsh Harbour      BS     80.38  26.5412  -77.0636           \n",
-       "23             Vaini      TO     77.16 -21.2000 -175.2000           "
+       "18         Hithadhoo      MV     83.12  -0.6000   73.0833           "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "959d3060",
    "metadata": {},
    "outputs": [
@@ -790,6 +790,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
       "Hotel not found... skipping.\n",
@@ -839,6 +845,24 @@
        "      <td>19.7297</td>\n",
        "      <td>-155.0900</td>\n",
        "      <td>Hilo Hawaiian Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sabha</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>73.31</td>\n",
+       "      <td>27.0377</td>\n",
+       "      <td>14.4283</td>\n",
+       "      <td>Foundation Taaj Asala for Historical Research ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sumbe</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>74.75</td>\n",
+       "      <td>-11.2061</td>\n",
+       "      <td>13.8437</td>\n",
+       "      <td>Hotel Ritz Sumbe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -903,24 +927,6 @@
        "      <td>73.0833</td>\n",
        "      <td>Scoop Guest House</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Marsh Harbour</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>80.38</td>\n",
-       "      <td>26.5412</td>\n",
-       "      <td>-77.0636</td>\n",
-       "      <td>Abaco Beach Resort</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Vaini</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>77.16</td>\n",
-       "      <td>-21.2000</td>\n",
-       "      <td>-175.2000</td>\n",
-       "      <td>Keleti Beach Resort</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -928,6 +934,8 @@
       "text/plain": [
        "                City Country  Max Temp      Lat       Lng  \\\n",
        "4               Hilo      US     76.73  19.7297 -155.0900   \n",
+       "5              Sabha      LY     73.31  27.0377   14.4283   \n",
+       "8              Sumbe      AO     74.75 -11.2061   13.8437   \n",
        "10            Atuona      PF     78.15  -9.8000 -139.0333   \n",
        "11        Butaritari      KI     81.25   3.0707  172.7902   \n",
        "12  Saint Pete Beach      US     79.00  27.7253  -82.7412   \n",
@@ -935,23 +943,21 @@
        "14            Majene      ID     86.25  -3.5403  118.9707   \n",
        "17   Bambous Virieux      MU     79.21 -20.3428   57.7575   \n",
        "18         Hithadhoo      MV     83.12  -0.6000   73.0833   \n",
-       "21     Marsh Harbour      BS     80.38  26.5412  -77.0636   \n",
-       "23             Vaini      TO     77.16 -21.2000 -175.2000   \n",
        "\n",
-       "                            Hotel Name  \n",
-       "4                  Hilo Hawaiian Hotel  \n",
-       "10                         Villa Enata  \n",
-       "11                  Isles Sunset Lodge  \n",
-       "12  Grand Plaza Hotel - St. Pete Beach  \n",
-       "13                     People ThankYou  \n",
-       "14                  Kost Putri RABBANI  \n",
-       "17                      Casa Tia Villa  \n",
-       "18                   Scoop Guest House  \n",
-       "21                  Abaco Beach Resort  \n",
-       "23                 Keleti Beach Resort  "
+       "                                           Hotel Name  \n",
+       "4                                 Hilo Hawaiian Hotel  \n",
+       "5   Foundation Taaj Asala for Historical Research ...  \n",
+       "8                                    Hotel Ritz Sumbe  \n",
+       "10                                        Villa Enata  \n",
+       "11                                 Isles Sunset Lodge  \n",
+       "12                 Grand Plaza Hotel - St. Pete Beach  \n",
+       "13                                    People ThankYou  \n",
+       "14                                 Kost Putri RABBANI  \n",
+       "17                                     Casa Tia Villa  \n",
+       "18                                  Scoop Guest House  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "344da2aa",
    "metadata": {},
    "outputs": [],
@@ -1008,14 +1014,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "4b57a9cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5064d2c1d03d4d1eb3dd4c6c451223a2",
+       "model_id": "2679147833df4b09928288445ebdc566",
        "version_major": 2,
        "version_minor": 0
       },
