Adding revised homework

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,13 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02efe13cdfe74fc7ab87b39a7157c4c1",
+       "model_id": "36f3217b191a455b9723a02e894a5c3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,30 +282,50 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Salinopolis\"]\n",
-    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Porto Franco\"]\n",
-    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Oeiras Do Para\"]\n",
-    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Prainha\"] \n",
-    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Itaituba\"] "
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Vila Velha\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Vila Velha\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Conceicao Da Barra\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Caravelas\"] \n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Belmonte\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = vacation_start[[\"Lat\", \"Lng\"]].to_numpy().reshape(2)\n",
-    "end = vacation_end[[\"Lat\", \"Lng\"]].to_numpy().reshape(2)\n",
-    "stop1 = vacation_stop1[[\"Lat\", \"Lng\"]].to_numpy().reshape(2)\n",
-    "stop2 = vacation_stop2[[\"Lat\", \"Lng\"]].to_numpy().reshape(2)\n",
-    "stop3 = vacation_stop3[[\"Lat\", \"Lng\"]].to_numpy().reshape(2)"
+    "start = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
+    "end = vacation_end[\"Lat\"].to_numpy()[0], vacation_end[\"Lng\"].to_numpy()[0]\n",
+    "stop1 = vacation_stop1[\"Lat\"].to_numpy()[0], vacation_stop1[\"Lng\"].to_numpy()[0]\n",
+    "stop2 = vacation_stop2[\"Lat\"].to_numpy()[0], vacation_stop2[\"Lng\"].to_numpy()[0]\n",
+    "stop3 = vacation_stop3[\"Lat\"].to_numpy()[0], vacation_stop3[\"Lng\"].to_numpy()[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-15.8631, -38.8828)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -313,7 +333,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03b62bc8ad2b43bc8798dfc978c9289e",
+       "model_id": "d243e24d7bc343d186bef963b0e4c427",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -374,67 +394,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>250</td>\n",
-       "      <td>Salinopolis</td>\n",
+       "      <td>477</td>\n",
+       "      <td>Vila Velha</td>\n",
        "      <td>BR</td>\n",
-       "      <td>80.92</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-0.6136</td>\n",
-       "      <td>-47.3561</td>\n",
-       "      <td>Salinas Park Resort Maçarico AP101</td>\n",
+       "      <td>80.55</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-20.3297</td>\n",
+       "      <td>-40.2925</td>\n",
+       "      <td>Quality Suites Vila Velha</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>653</td>\n",
-       "      <td>Oeiras Do Para</td>\n",
+       "      <td>347</td>\n",
+       "      <td>Conceicao Da Barra</td>\n",
        "      <td>BR</td>\n",
-       "      <td>77.86</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-2.0031</td>\n",
-       "      <td>-49.8544</td>\n",
-       "      <td>Araticu Soft Hotel</td>\n",
+       "      <td>75.42</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-18.5933</td>\n",
+       "      <td>-39.7322</td>\n",
+       "      <td>Cricaré Praia Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>493</td>\n",
-       "      <td>Prainha</td>\n",
+       "      <td>192</td>\n",
+       "      <td>Caravelas</td>\n",
        "      <td>BR</td>\n",
-       "      <td>78.94</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-1.8000</td>\n",
-       "      <td>-53.4800</td>\n",
-       "      <td>Casa Rocha</td>\n",
+       "      <td>77.38</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-17.7125</td>\n",
+       "      <td>-39.2481</td>\n",
+       "      <td>Pousada dos Navegantes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>273</td>\n",
-       "      <td>Itaituba</td>\n",
+       "      <td>263</td>\n",
+       "      <td>Belmonte</td>\n",
        "      <td>BR</td>\n",
-       "      <td>78.67</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-4.2761</td>\n",
-       "      <td>-55.9836</td>\n",
-       "      <td>Hotel Campos</td>\n",
+       "      <td>77.50</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-15.8631</td>\n",
+       "      <td>-38.8828</td>\n",
+       "      <td>Pousada Monte Carmelo O Pão</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID            City Country  Max Temp Weather Description     Lat  \\\n",
-       "0      250     Salinopolis      BR     80.92           clear sky -0.6136   \n",
-       "1      653  Oeiras Do Para      BR     77.86           clear sky -2.0031   \n",
-       "2      493         Prainha      BR     78.94           clear sky -1.8000   \n",
-       "3      273        Itaituba      BR     78.67          light rain -4.2761   \n",
+       "   City_ID                City Country  Max Temp Weather Description      Lat  \\\n",
+       "0      477          Vila Velha      BR     80.55    scattered clouds -20.3297   \n",
+       "1      347  Conceicao Da Barra      BR     75.42       broken clouds -18.5933   \n",
+       "2      192           Caravelas      BR     77.38     overcast clouds -17.7125   \n",
+       "3      263            Belmonte      BR     77.50       broken clouds -15.8631   \n",
        "\n",
-       "       Lng                          Hotel Name  \n",
-       "0 -47.3561  Salinas Park Resort Maçarico AP101  \n",
-       "1 -49.8544                  Araticu Soft Hotel  \n",
-       "2 -53.4800                          Casa Rocha  \n",
-       "3 -55.9836                        Hotel Campos  "
+       "       Lng                   Hotel Name  \n",
+       "0 -40.2925    Quality Suites Vila Velha  \n",
+       "1 -39.7322          Cricaré Praia Hotel  \n",
+       "2 -39.2481       Pousada dos Navegantes  \n",
+       "3 -38.8828  Pousada Monte Carmelo O Pão  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,28 +491,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-9fb010d5519c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n\u001b[1;32m      6\u001b[0m              max_intensity=300, point_radius=4)\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mmarker_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmarker_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo_box_content\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhotel_info\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheat_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarker_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/pythonData/lib/python3.8/site-packages/gmaps/marker.py\u001b[0m in \u001b[0;36mmarker_layer\u001b[0;34m(locations, hover_text, label, info_box_content, display_info_box)\u001b[0m\n\u001b[1;32m    551\u001b[0m         \u001b[0mA\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;32mclass\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMarkers\u001b[0m\u001b[0;31m`\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    552\u001b[0m     \"\"\"\n\u001b[0;32m--> 553\u001b[0;31m     marker_options = _marker_layer_options(\n\u001b[0m\u001b[1;32m    554\u001b[0m         locations, hover_text, label, info_box_content, display_info_box)\n\u001b[1;32m    555\u001b[0m     \u001b[0mmarkers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mMarker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0moption\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0moption\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmarker_options\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/pythonData/lib/python3.8/site-packages/gmaps/marker.py\u001b[0m in \u001b[0;36m_marker_layer_options\u001b[0;34m(locations, hover_text, label, info_box_content, display_info_box)\u001b[0m\n\u001b[1;32m    318\u001b[0m     }\n\u001b[1;32m    319\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 320\u001b[0;31m     info_box_options = _info_box_option_lists(\n\u001b[0m\u001b[1;32m    321\u001b[0m         number_markers, info_box_content, display_info_box)\n\u001b[1;32m    322\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/pythonData/lib/python3.8/site-packages/gmaps/marker.py\u001b[0m in \u001b[0;36m_info_box_option_lists\u001b[0;34m(number_markers, info_box_content, display_info_box)\u001b[0m\n\u001b[1;32m    252\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mimarker\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_markers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdisplay_info_box\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimarker\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 254\u001b[0;31m             \u001b[0mis_content_empty\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minfo_box_content\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimarker\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    255\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_content_empty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    256\u001b[0m                 \u001b[0mdisplay_info_box\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimarker\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b10ee3a7a804bfe8baaabf167984c8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
-    "locations = vacation_df[[\"Lat\", \"Lng\"]]\n",
-    "max_temp = vacation_df[\"Max Temp\"]\n",
+    "locations = itinerary_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = itinerary_df[\"Max Temp\"]\n",
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
     "             max_intensity=300, point_radius=4)\n",
